[LWC-2869] [LWC-2910] [LWC-2911] post code review fixes, as well as documentation of the chat related interfaces. Code review: LWCR-410